<resources>
    <string name="app_name">Skedi</string>
    <string name="app_name_2">Skedi V.1.0</string>
    <string name="title_activity_home_activity">Jadwal Pelajaran</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="date_today">Today</string>
    <string name="title_activity_setting_">Pengaturan</string>
    <string name="akun_ada">Sudah Punya Akun ?</string>
    <string name="activity_login">Login</string>
    <string name="nik">Nik</string>
    <string name="nis">Nis</string>
    <string name="password">Password</string>
    <string name="login">Masuk </string>
    <string name="SignUp1">Belum Punya Akun?</string>
    <string name="SignUp2">Daftar</string>
    <string name="alamat">Alamat</string>
    <string name="default_icon_value" translatable="false">ic_alarm_on_black_24dp</string>
    <string name="default_colour_value" translatable="false">#8e8e8e</string>

    <string name="action_day_view">Tampilan Hari</string>
    <string name="action_three_day_view">Tampilan 3 Hari</string>
    <string name="action_week_view">Tampilan Perminggu</string>
    <string name="action_today">Hari Ini</string>
    <string name="title_activity_reminders_">Pengaturan Reminders</string>
    <string name="title_activity_profile_"></string>
    <string name="title_activity_home_work_">PR </string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="title_activity_about_">Tentang</string>

    <string name="deskripsi">Skedi (schedule for study) adalah aplikasi notifikasi jadwal pelajaran bagi siswa SMK Negri 2 Depok</string>
    <string name="mahasiswa">Mahasiswa</string>
    <string name="nama_m">Khusnul Fitriani</string>
    <string name="nim">12520241066</string>
    <string name="prod">Pend. Teknik Informatika</string>

    <string name="pembimbing">Pembimbing</string>
    <string name="nama_P">Handaru Jati, Ph.D.</string>
    <string name="nip">19740511 199903 1 002</string>
    <string name="title_activity_profile_activity">Profile</string>
    <string name="notification_channel_followers">Follower Notification Channel</string>

    <string name="ob_header1">Akses Mudah</string>
    <string name="ob_header2">Personalisasi</string>
    <string name="ob_header3">Raih Prestasi</string>

    <string name="ob_get_started">Mari Mulai</string>

    <string name="ob_desc1">Lihat jadwal kapanpun dimanapun</string>
    <string name="ob_desc2">Atur alarm semaumu untuk pengingat PR-mu</string>
    <string name="ob_desc3">Tugas selesai, prestasi dicapai.</string>

    <string name="mnt0">Tidak Ada</string>
    <string name="mnt5">5 menit sebelum</string>
    <string name="mnt10">10 menit sebelum</string>
    <string name="mnt15">15 menit sebelum</string>
    <string name="mnt30">30 menit sebelum</string>
    <string name="mnt60">60 menit sebelum</string>

    <!-- Names -->
    <string name="names_array">Ethan</string>


</resources>
