<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Activity.SignUpUser_Activity">
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        android:fillViewport="true" >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:paddingBottom="40dp"
        >

        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@mipmap/uny_logo" />

        <RelativeLayout
            android:id="@+id/rellayS1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgView_logo"
            android:visibility="gone">


            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="SignUp"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <!--NIs-->
            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_login"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/nis"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/ed_nis"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/ed_action"
                        android:fontFamily="sans-serif-light"
                        android:inputType="number"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>
                <!--nama siswa-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="Nama Siswa"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/ed_namaSiswa"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/ed_action"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:inputType="textFilter"
                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>
                <!--alamat siswa-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/alamat"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/ed_alamatSiswa"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/ed_action"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>
                <!--Kelas-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="Kelas"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <com.reginald.editspinner.EditSpinner
                        android:id="@+id/eds_kelasSiswa"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:hint=""
                        android:textColor="@color/white"
                        android:background="@drawable/ed_action"
                        android:textColorHint="#aa828282"
                        android:textSize="18dp"
                        android:textIsSelectable="true"
                        android:focusable="false"
                        app:dropDownDrawable="@drawable/picker"
                        app:dropDownDrawableSpacing="15dp"
                        app:dropDownDrawableWidth="25dp"
                        app:dropDownDrawableHeight="25dp"
                        app:dropDownAnimStyle="@style/CustomPopupAnimation"
                        />

                </LinearLayout>
                <!--jurusan-->
                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="20dp"-->
                    <!--android:orientation="vertical">-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:fontFamily="sans-serif-light"-->
                        <!--android:text="Jurusan"-->
                        <!--android:textAllCaps="true"-->
                        <!--android:textColor="@color/white"-->
                        <!--android:textSize="15sp" />-->

                    <!--<com.reginald.editspinner.EditSpinner-->
                        <!--android:id="@+id/eds_jurusanSiswa"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="40dp"-->
                        <!--android:layout_marginTop="5dp"-->
                        <!--android:paddingLeft="15dp"-->
                        <!--android:paddingRight="15dp"-->
                        <!--android:textColor="@color/white"-->
                        <!--android:background="@drawable/ed_action"-->
                        <!--android:hint=""-->
                        <!--android:textColorHint="#aa828282"-->
                        <!--android:textSize="18dp"-->
                        <!--android:inputType="none"-->
                        <!--android:textIsSelectable="true"-->
                        <!--android:focusable="false"-->
                        <!--app:dropDownDrawable="@drawable/picker"-->
                        <!--app:dropDownDrawableSpacing="15dp"-->
                        <!--app:dropDownDrawableWidth="25dp"-->
                        <!--app:dropDownDrawableHeight="25dp"-->
                        <!--app:dropDownAnimStyle="@style/CustomPopupAnimation"/>-->

                <!--</LinearLayout>-->
                <!--password 1-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="Password"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/ed_password1"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/ed_action"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>
                <!--password2-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="Konfirmasi Password"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/ed_password2"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/ed_action"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>
                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/showPassword"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lihat Password"
                    android:buttonTint="@color/white"
                    />

            </LinearLayout>

            <!--btn Login-->
            <Button
                android:id="@+id/btn_daftar"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/linlay1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_action"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/SignUp2"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>


    </RelativeLayout>

    </ScrollView>

</RelativeLayout>